--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body{
     background-color: rgb(200, 200, 200);
+    font-family: 'noto-sans-jp', sans-serif;
 }
 
 .container{
     background-color: white;
     border-radius: 15px;
     position: absolute;
-    left: calc(50vw - 50%);
-    top: calc(50vh - 50%);
+    left: calc(50vw - 15vw);
+    top: calc(50vh);
+    width: 30vw;
+    text-align: center;
+    height: max-content;
+    padding: 10px;
+    filter: drop-shadow(0px 0px 10px #000);
 }
