--- a/style.css
+++ b/style.css
@@ -9,9 +9,13 @@ body{
     background-color: white;
     border-radius: 15px;
     position: absolute;
-    left: calc(50vw - 15vw);
-    top: calc(50vh);
-    width: 30vw;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    min-width: 30vw;
+    width: min-content;
     text-align: center;
     height: max-content;
     padding: 10px;
